src/objects/ACN_AutomationSetting__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>Contains settings that can turn off workflow, triggers and validation rules</description>
    <fields>
        <fullName>ACN_Acc_Acc_Relationship_TriggerEnabled__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Acc Acc Relationship Trigger Enabled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ACN_AccoContactRelationshipValidation__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Account Contact Relationship Validation</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ACN_AccountAccountRelationshipValidation__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Account Account Relationship Validation</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ACN_AccountAccountRelationshipWorkflow__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Account Account Relationship Workflow</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ACN_AccountAddHistoryValidationEnabled__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Account Add History Validation Enabled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ACN_AccountAddressHistoryWorkflowEnabled__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Account Address History Workflow Enabled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ACN_AccountAddressHistory_TriggerEnabled__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Account Address History Trigger Enabled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ACN_AccountAssetValidationEnabled__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Account Asset Validation Enabled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ACN_AccountAssetWorkflowEnabled__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Account Asset Workflow Enabled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ACN_AccountContactRelationshipWorkflow__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Account Contact Relationship Workflow</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ACN_AccountReviewValidationEnabled__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Account Review Validation Enabled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ACN_AccountReviewWorkflowEnabled__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Account Review Workflow Enabled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ACN_AccountTriggerEnabled__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Account Trigger Enabled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ACN_AccountValidationEnabled__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Account Validation Enabled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ACN_AccountWorkflowEnabled__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Account Workflow Enabled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ACN_ActivityValidationEnabled__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Activity Validation Enabled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ACN_ActivityWorkflowEnabled__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Activity Workflow Enabled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ACN_ApplicationLogValidationEnabled__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Application Log Validation Enabled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ACN_ApplicationLogWorkflowEnabled__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Application Log Workflow Enabled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ACN_AsyncResultTriggerEnabled__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Async Result Trigger Enabled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ACN_AttachmentTriggerEnabled__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Attachment Trigger Enabled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ACN_BankAccountValidationRule__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Bank Account Validation Rule</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ACN_BankAccountWorkflowEnabled__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Bank Account Workflow Enabled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ACN_CampaignMemberValidationEnabled__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Campaign Member Validation Enabled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ACN_CampaignMemberWorkflowEnabled__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Campaign Member Workflow Enabled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ACN_CampaignTriggerEnabled__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Campaign Trigger Enabled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ACN_CampaignValidationEnabled__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Campaign Validation Enabled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ACN_CampaignWorkflowEnabled__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Campaign Workflow Enabled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ACN_ChecklistItemAdminValidationEnabled__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Checklist Item Admin Validation Enabled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ACN_ChecklistItemAdminWorkflowEnabled__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Checklist Item Admin Workflow Enabled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ACN_ChecklistItemValidationEnabled__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Checklist Item Validation Enabled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ACN_ChecklistItemWorkflowEnabled__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Checklist Item Workflow Enabled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ACN_Checklist_ItemEnabled__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Checklist Item Enabled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ACN_ClientCoverageMemberTriggerEnabled__c</fullName>
        <defaultValue>true</defaultValue>
        <label>ClientCoverageMember Trigger Enabled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ACN_ClientCoverageMemberWorkflowEnabled__c</fullName>
        <defaultValue>true</defaultValue>
        <label>ClientCoverageMember Workflow Enabled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ACN_CompanySICValidationEnabled__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Company SIC Validation Enabled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ACN_CompanySICWorkflowEnabled__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Company SIC Workflow Enabled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ACN_ContactTeamMember_Validation_Enabled__c</fullName>
        <defaultValue>true</defaultValue>
        <label>ContactTeamMember Validation Enabled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ACN_ContactTriggerEnabled__c</fullName>
        <defaultValue>true</defaultValue>
        <description>If true, triggers on the Contact will run when TriggerEnabled__c = True. If false no triggers on
            Contact will run
        </description>
        <label>Contact Trigger Enabled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ACN_ContactValidationEnabled__c</fullName>
        <defaultValue>true</defaultValue>
        <description>If true, validation rules on the Contact will run when ValidationEnabled__c = True. If false no
            validation rules on Contact will run
        </description>
        <label>Contact Validation Enabled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ACN_ContactWorkflowEnabled__c</fullName>
        <defaultValue>true</defaultValue>
        <description>If true, worflow rules on the Contact will run when WorkflowEnabled__c = True. If false no workflow
            rules on Contact will run
        </description>
        <label>Contact Workflow Enabled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ACN_ContentVersionTriggerEnabled__c</fullName>
        <defaultValue>true</defaultValue>
        <label>ContentVersion Trigger Enabled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ACN_DebugEnabled__c</fullName>
        <defaultValue>true</defaultValue>
        <label>DebugEnabled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ACN_DecisionConditionValidation__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Decision Condition Validation</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ACN_DecisionConditionWorkflow__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Decision Condition Workflow</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ACN_DocumentFolderValidationEnabled__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Document Folder Validation Enabled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ACN_DocumentFolderWorkflowEnabled__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Document Folder Workflow Enabled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ACN_DocumentTriggerEnabled__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Document Trigger Enabled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ACN_DocumentValidationEnabled__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Document Validation Enabled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ACN_DocumentWorkflowEnabled__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Document Workflow Enabled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ACN_EmployeeTriggerEnabled__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Employee Trigger Enabled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ACN_EmployeeValidationEnabled__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Employee Validation Enabled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ACN_EmployeeWorkflowEnabled__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Employee Workflow Enabled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ACN_EventTriggerEnabled__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Event Trigger Enabled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ACN_EventValidationEnabled__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Event Validation Enabled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ACN_EventWorkflowEnabled__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Event Workflow Enabled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ACN_ExceptionEnabled__c</fullName>
        <defaultValue>true</defaultValue>
        <label>ExceptionEnabled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ACN_File_Prevention_Trigger_TextEnabled__c</fullName>
        <defaultValue>true</defaultValue>
        <label>File Prevention Trigger TextEnabled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ACN_InteractionContactWorkflowEnabled__c</fullName>
        <defaultValue>true</defaultValue>
        <label>InteractionContact Workflow Enabled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ACN_InteractionWorkflowEnabled__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Interaction Workflow Enabled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ACN_LeadValidationEnabled__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Lead Validation Enabled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ACN_LeadWorkflowEnabled__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Lead Workflow Enabled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ACN_OppLineItemTriggerTriggerEnabled__c</fullName>
        <defaultValue>true</defaultValue>
        <label>OppLineItemTrigger Trigger Enabled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ACN_OpportunityAssetValidationEnabled__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Opportunity Asset Validation Enabled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ACN_OpportunityAssetWorkflowEnabled__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Opportunity Asset Workflow Enabled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ACN_OpportunityConditionWorkflowEnabled__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Opportunity Condition Workflow Enabled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ACN_OpportunityEnabled__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Opportunity Enabled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ACN_OpportunityProductValidationEnabled__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Opportunity Product Validation Enabled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ACN_OpportunityProductWorkflowEnabled__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Opportunity Product Workflow Enabled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ACN_OpportunitySecurityValidationEnabled__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Opportunity Security Validation Enabled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ACN_OpportunitySecurityWorkflowEnabled__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Opportunity Security Workflow Enabled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ACN_OpportunityTeamMemberValidation__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Opportunity Team Member Validation</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ACN_OpportunityTeamMemberWorkflow__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Opportunity Team Member Workflow</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ACN_OpportunityValidationEnabled__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Opportunity Validation Enabled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ACN_OpportunityWorkflowEnabled__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Opportunity Workflow Enabled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ACN_PaymentScheduleValidationEnabled__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Payment Schedule Validation Enabled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ACN_PaymentScheduleWorkflowEnabled__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Payment Schedule Workflow Enabled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ACN_ProcessingRequestValidationEnabled__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Processing Request Validation Enabled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ACN_ProcessingRequestWorkflowEnabled__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Processing Request Workflow Enabled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ACN_ProductValidationEnabled__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Product Validation Enabled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ACN_ProductWorkflowEnabled__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Product Workflow Enabled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ACN_SICValidationEnabled__c</fullName>
        <defaultValue>true</defaultValue>
        <label>SIC Validation Enabled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ACN_SICWorkflowEnabled__c</fullName>
        <defaultValue>true</defaultValue>
        <label>SIC Workflow Enabled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ACN_SearchTriggerTriggerEnabled__c</fullName>
        <defaultValue>true</defaultValue>
        <label>SearchTrigger Trigger Enabled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ACN_SearchValidationEnabled__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Search Validation Enabled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ACN_SearchWorkflowEnabled__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Search Workflow Enabled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ACN_TestEnabled__c</fullName>
        <defaultValue>true</defaultValue>
        <label>TestTrigger Enabled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ACN_TriggerEnabled__c</fullName>
        <defaultValue>true</defaultValue>
        <description>If true, triggers selected for each object will run. If false, no triggers will run</description>
        <label>Trigger Enabled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ACN_UnderwritingRequestValidationEnabled__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Underwriting Request Validation Enabled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ACN_UnderwritingRequestWorkflowEnabled__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Underwriting Request Workflow Enabled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ACN_UserRequestTriggerEnabled__c</fullName>
        <defaultValue>true</defaultValue>
        <label>User Request Trigger Enabled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ACN_UserTriggerEnabled__c</fullName>
        <defaultValue>true</defaultValue>
        <label>User Trigger Enabled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ACN_UserValidationEnabled__c</fullName>
        <defaultValue>true</defaultValue>
        <label>User Validation Enabled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ACN_UserWorkflowEnabled__c</fullName>
        <defaultValue>true</defaultValue>
        <label>User Workflow Enabled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ACN_ValidationEnabled__c</fullName>
        <defaultValue>true</defaultValue>
        <description>If true, validation rules selected for each object will run. If false, no validation rules will
            run
        </description>
        <label>Validation Enabled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ACN_WorkflowEnabled__c</fullName>
        <defaultValue>true</defaultValue>
        <description>If true, workflow rules selected for each object will run. If false, no workflow rules will run
        </description>
        <label>Workflow Enabled</label>
        <type>Checkbox</type>
    </fields>
    <label>ACN_AutomationSetting</label>
</CustomObject>